Chat overflow fix

--- a/web/src/app/chat/main-chat-page/components/chat/chat.component.scss
+++ b/web/src/app/chat/main-chat-page/components/chat/chat.component.scss
@@ -9,6 +9,7 @@
 
 .messages {
   display: flex;
+  overflow: auto;
   justify-content: flex-start;
   flex-direction: column;
   flex-grow: 1;
